fix(core): resolve invalid stats
- also add a new endpoint for stats
- display a graph will avg duration per day
- remove searchAndAggregate endpoint

close #111